--- a/CarCre/App_Code/MyHelpers.cshtml
+++ b/CarCre/App_Code/MyHelpers.cshtml
@@ -69,7 +69,7 @@
                         {
                             <tr>
                                 <td>
-                                    <input type="button" id="Edit"  data-toggle="modal" data-target="#myEditModal" value="Edit" data-id="@record.ServiceId" />
+                                    <input type="button" id="Edit" class="EditRecord"  data-toggle="modal" data-target="#myEditModal" value="Edit" data-id="@record.ServiceId" />               
                                 </td>
                                 <td>
                                     <input type="button" value="Delete" data-id="@record.ServiceId" onclick="location.href='@url.Action("Delete", typeOfService, new { serviceId = record.ServiceId})'" />
@@ -151,9 +151,9 @@
                         $('#myAddModal').modal('show');
                     });
                 });
-                $('#Edit').click(function () {
+                $('.EditRecord').click(function () {
                     var url = $('#myEditModal').data('url');
-                    url += "?id=" + $('#Edit').data('id')
+                    url += "?id=" + $(this).data('id')
                     $.get(url, function (data) {
                         $('#EditRecord').html(data);
                         $('#myEditModal').modal('show');
