--- a/CarCre/Views/TuneUp/Index.cshtml
+++ b/CarCre/Views/TuneUp/Index.cshtml
@@ -1,127 +1,4 @@
-﻿@model IEnumerable<CarCare.Models.ServiceRecordViewModel>
-
-@{
-    ViewBag.Title = "Tune Up";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-<h2>Tune Up</h2>
-
-
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
-<script src="~/Scripts/bootstrap.min.js"></script>
-<link href="~/Content/bootstrap.css" rel="stylesheet" />
-
-<div class="container">
-    <div class="row">
-        <button type="button" id="AddTuneUp" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Add</button>
-        <table class="table table-inverse">
-            <thead>
-                <tr>
-                    <th>
-                        Action
-                    </th>
-                    <th>
-                        Action
-                    </th>
-                    <th>
-                        Vehicle
-                    </th>
-                    <th>
-                        Service Station
-                    </th>
-                    <th>
-                        Service Cost
-                    </th>
-                    <th>
-                        Service Date
-                    </th>
-                    <th>
-                        Last Modified Date
-                    </th>
-                    <th>
-                        Completed Date
-                    </th>
-                    <th>
-                        Station ZipCode
-                    </th>
-                    <th>
-                        Service Notes
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-
-                @foreach (var record in Model)
-                {
-                    <tr>
-                        <td>
-                            <input type="button" id="EditBtn" value="Edit" data-id="@record.ServiceId" onclick="location.href='@Url.Action("EditTuneUp", "TuneUp", new { serviceId = record.ServiceId})'"/>
-                        </td>
-                        <td>
-                            <input type="button" value="Delete" data-id="@record.ServiceId" onclick="location.href='@Url.Action("DeleteTuneUp", "TuneUp", new { serviceId = record.ServiceId})'" />
-                        </td>
-                        <td>
-                            @Html.DropDownList("VehhicleDropdown", new SelectList(record.Vehicles, "Value", "Text", record.VehicleId))
-                        </td>
-                        <td>
-                            @Html.DropDownList("ServiceStationDropdown", new SelectList(record.ServiceStations, "Value", "Text", record.ServiceStationId))
-                        </td>
-                        <td>
-                            @record.ServiceCost
-                        </td>
-                        <td>
-                            @record.ServiceDate
-                        </td>
-                        <td>
-                            @record.LastModifiedDate
-                        </td>
-                        <td>
-                            @record.CompletedDate
-                        </td>
-                        <td>
-                            @record.StationZipCode
-                        </td>
-                        <td>
-                            @record.ServiceNote
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-
+﻿<div class="container">
+    @MyHelpers.DisplayServiceRecords("TuneUp", (IEnumerable<CarCare.Models.ServiceRecordViewModel>)Model)
 </div>
 
-
-<!-- Trigger the modal with a button -->
-<!-- Add New Recod Modal -->
-<div id="myModal" class="modal fade" role="dialog" data-url='@Url.Action("AddNewRecord","TuneUp")'>
-    <div class="modal-dialog">
-
-        <!-- Modal content-->
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Add TuneUp Record</h4>
-            </div>
-            <div class="modal-body" id="AddTuneUpRecord">
-
-            </div>
-        </div>
-    </div>
-
-</div>
-
-
-<script type="text/javascript">
-    $(document).ready(function () {
-        $('#AddTuneUp').click(function () {
-            var url = $('#myModal').data('url');
-            $.get(url, function (data) {
-                $('#AddTuneUpRecord').html(data);
-                $('#myModal').modal('show');
-            });
-        });
-    });
-</script>
