--- a/CarCre/Views/Insurance/Index.cshtml
+++ b/CarCre/Views/Insurance/Index.cshtml
@@ -14,7 +14,7 @@
 
 <div class="container">
     <div class="row">
-        <button type="button" id="AddInsurance" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Add</button>
+        <button type="button" id="AddBtn" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myAddModal">Add</button>
         <table class="table table-inverse">
             <thead>
                 <tr>
@@ -23,6 +23,9 @@
                     </th>
                     <th>
                         Action
+                    </th>
+                    <th>
+                        Policy Number
                     </th>
                     <th>
                         Vehicle
@@ -50,12 +53,14 @@
                 {
                     <tr>
                         <td>
-                            <input type="button" id="EditBtn" value="Edit" data-id="@record.InsuranceId" onclick="location.href='@Url.Action("EditInsurance", "Insurance", new { insuranceId = record.InsuranceId})'" />
+                            <input type="button" id="EditBtn" class="EditRecord" data-toggle="modal" data-target="#myEditModal" value="Edit" data-id="@record.InsuranceId" />
                         </td>
                         <td>
                             <input type="button" value="Delete" data-id="@record.InsuranceId" onclick="location.href='@Url.Action("DeleteInsurance", "Insurance", new { insuranceId = record.InsuranceId})'" />
                         </td>
-
+                        <td>
+                            @record.PolicyNumber
+                        </td>
                         <td>
                             @Html.DropDownList("VehhicleDropdown", new SelectList(record.Vehicles, "Value", "Text", record.VehicleId))
                         </td>
@@ -85,7 +90,7 @@
 
 <!-- Trigger the modal with a button -->
 <!-- Add New Recod Modal -->
-<div id="myModal" class="modal fade" role="dialog" data-url='@Url.Action("AddNewRecord","Insurance")'>
+<div id="myAddModal" class="modal fade" role="dialog" data-url='@Url.Action("AddNewRecord","Insurance")'>
     <div class="modal-dialog">
 
         <!-- Modal content-->
@@ -94,7 +99,26 @@
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">Add Insurance Record</h4>
             </div>
-            <div class="modal-body" id="AddInsuranceRecord">
+            <div class="modal-body" id="AddRecord">
+
+            </div>
+        </div>
+    </div>
+
+</div>
+
+<!-- Trigger the modal with a button -->
+<!-- Edit Record Modal -->
+<div id="myEditModal" class="modal fade" role="dialog" data-url='@Url.Action("EditInsurance","Insurance")'>
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Edit Insurance Information</h4>
+            </div>
+            <div class="modal-body" id="EditRecord">
 
             </div>
         </div>
@@ -105,11 +129,19 @@
 
 <script type="text/javascript">
     $(document).ready(function () {
-        $('#AddInsurance').click(function () {
-            var url = $('#myModal').data('url');
+        $('#AddBtn').click(function () {
+            var url = $('#myAddModal').data('url');
             $.get(url, function (data) {
-                $('#AddInsuranceRecord').html(data);
-                $('#myModal').modal('show');
+                $('#AddRecord').html(data);
+                $('#myAddModal').modal('show');
+            });
+        });
+        $('.EditRecord').click(function () {
+            var url = $('#myEditModal').data('url');
+            url += "?insuranceId=" + $(this).data('id');
+            $.get(url, function (data) {
+                $('#EditRecord').html(data);
+                $('#myEditModal').modal('show');
             });
         });
     });
