--- a/CarCre/Views/Lease/Index.cshtml
+++ b/CarCre/Views/Lease/Index.cshtml
@@ -14,7 +14,7 @@
 
 <div class="container">
     <div class="row">
-        <button type="button" id="AddLease" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Add</button>
+        <button type="button" id="AddBtn" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myAddModal">Add</button>
         <table class="table table-inverse">
             <thead>
                 <tr>
@@ -31,7 +31,7 @@
                         Lease Start Date
                     </th>
                     <th>
-                        Lease Term
+                        Lease Term (months)
                     </th>
                     <th>
                         Monthly Payment
@@ -62,7 +62,7 @@
                 {
                     <tr>
                         <td>
-                            <input type="button" id="EditBtn" value="Edit" data-id="@record.LeaseId" onclick="location.href='@Url.Action("EditLease", "Lease", new { leaseId = record.LeaseId})'" />
+                            <input type="button" id="EditBtn" class="EditRecord" data-toggle="modal" data-target="#myEditModal" value="Edit" data-id="@record.LeaseId" />
                         </td>
                         <td>
                             <input type="button" value="Delete" data-id="@record.LeaseId" onclick="location.href='@Url.Action("DeleteLease", "Lease", new { leaseId = record.LeaseId})'" />
@@ -109,7 +109,7 @@
 
 <!-- Trigger the modal with a button -->
 <!-- Add New Recod Modal -->
-<div id="myModal" class="modal fade" role="dialog" data-url='@Url.Action("AddNewRecord","Lease")'>
+<div id="myAddModal" class="modal fade" role="dialog" data-url='@Url.Action("AddNewRecord","Lease")'>
     <div class="modal-dialog">
 
         <!-- Modal content-->
@@ -118,7 +118,26 @@
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">Add Lease Record</h4>
             </div>
-            <div class="modal-body" id="AddLeaseRecord">
+            <div class="modal-body" id="AddRecord">
+
+            </div>
+        </div>
+    </div>
+
+</div>
+
+<!-- Trigger the modal with a button -->
+<!-- Edit Record Modal -->
+<div id="myEditModal" class="modal fade" role="dialog" data-url='@Url.Action("EditLease","Lease")'>
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Edit Lease Information</h4>
+            </div>
+            <div class="modal-body" id="EditRecord">
 
             </div>
         </div>
@@ -129,11 +148,19 @@
 
 <script type="text/javascript">
     $(document).ready(function () {
-        $('#AddLease').click(function () {
-            var url = $('#myModal').data('url');
+        $('#AddBtn').click(function () {
+            var url = $('#myAddModal').data('url');
             $.get(url, function (data) {
-                $('#AddLeaseRecord').html(data);
-                $('#myModal').modal('show');
+                $('#AddRecord').html(data);
+                $('#myAddModal').modal('show');
+            });
+        });
+        $('.EditRecord').click(function () {
+            var url = $('#myEditModal').data('url');
+            url += "?leaseId=" + $(this).data('id');
+            $.get(url, function (data) {
+                $('#EditRecord').html(data);
+                $('#myEditModal').modal('show');
             });
         });
     });
