--- a/CarCre/Views/Warranty/Index.cshtml
+++ b/CarCre/Views/Warranty/Index.cshtml
@@ -13,7 +13,7 @@
 
 <div class="container">
     <div class="row">
-        <button type="button" id="AddWarranty" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Add</button>
+        <button type="button" id="AddBtn" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myAddModal">Add</button>
         <table class="table table-inverse">
             <thead>
                 <tr>
@@ -22,6 +22,9 @@
                     </th>
                     <th>
                         Action
+                    </th>
+                    <th>
+                        Policy Number
                     </th>
                     <th>
                         Vehicle
@@ -49,12 +52,14 @@
                 {
                     <tr>
                         <td>
-                            <input type="button" id="EditBtn" value="Edit" data-id="@record.WarrantyId" onclick="location.href='@Url.Action("EditWarranty", "Warranty", new { warrantyId = record.WarrantyId})'" />
+                            <input type="button" id="EditBtn" class="EditRecord" data-toggle="modal" data-target="#myEditModal" value="Edit" data-id="@record.WarrantyId" />
                         </td>
                         <td>
                             <input type="button" value="Delete" data-id="@record.WarrantyId" onclick="location.href='@Url.Action("DeleteWarranty", "Warranty", new { warrantyId = record.WarrantyId})'" />
                         </td>
-
+                        <td>
+                            @record.PolicyNumber
+                        </td>
                         <td>
                             @Html.DropDownList("VehhicleDropdown", new SelectList(record.Vehicles, "Value", "Text", record.VehicleId))
                         </td>
@@ -84,16 +89,16 @@
 
 <!-- Trigger the modal with a button -->
 <!-- Add New Recod Modal -->
-<div id="myModal" class="modal fade" role="dialog" data-url='@Url.Action("AddNewRecord","Warranty")'>
+<div id="myAddModal" class="modal fade" role="dialog" data-url='@Url.Action("AddNewRecord","Warranty")'>
     <div class="modal-dialog">
 
         <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Add Warrant Record</h4>
+                <h4 class="modal-title">Add Warranty Record</h4>
             </div>
-            <div class="modal-body" id="AddWarrantRecord">
+            <div class="modal-body" id="AddRecord">
 
             </div>
         </div>
@@ -101,13 +106,41 @@
 
 </div>
 
+<!-- Trigger the modal with a button -->
+<!-- Edit Record Modal -->
+<div id="myEditModal" class="modal fade" role="dialog" data-url='@Url.Action("EditWarranty","Warranty")'>
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Edit Warranty Information</h4>
+            </div>
+            <div class="modal-body" id="EditRecord">
+
+            </div>
+        </div>
+    </div>
+
+</div>
+
+
 <script type="text/javascript">
     $(document).ready(function () {
-        $('#AddWarranty').click(function () {
-            var url = $('#myModal').data('url');
+        $('#AddBtn').click(function () {
+            var url = $('#myAddModal').data('url');
             $.get(url, function (data) {
-                $('#AddWarrantRecord').html(data);
-                $('#myModal').modal('show');
+                $('#AddRecord').html(data);
+                $('#myAddModal').modal('show');
+            });
+        });
+        $('.EditRecord').click(function () {
+            var url = $('#myEditModal').data('url');
+            url += "?warrantyId=" + $(this).data('id');
+            $.get(url, function (data) {
+                $('#EditRecord').html(data);
+                $('#myEditModal').modal('show');
             });
         });
     });
