--- a/CarCre/Views/Shared/_Layout.cshtml
+++ b/CarCre/Views/Shared/_Layout.cshtml
@@ -56,9 +56,14 @@
                 @Html.ActionLink("CarCare", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">               
-                    <li>@Html.ActionLink("Google Maps", "SearchPlace", "GoogleMaps")</li>  
-                    <li>@Html.ActionLink("Service Stations", "Index", "ServiceStations")</li> 
+                <ul class="nav navbar-nav"> 
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Service Stations<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Saved Stations", "Index", "ServiceStations")</li>
+                            <li>@Html.ActionLink("Search", "SearchPlace", "GoogleMaps")</li>
+                        </ul>
+                    </li>  
                     <li>@Html.ActionLink("Vehicles", "Index", "Vehicle")</li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Maintainenance<span class="caret"></span></a>
