--- a/CarCre/Views/Shared/AddServiceRecord.cshtml
+++ b/CarCre/Views/Shared/AddServiceRecord.cshtml
@@ -62,7 +62,7 @@
                         @Html.HiddenFor(m => m.ServiceStationId)
                     </td>
                     <td>
-                        <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-info" data-dismiss="modal">Cancel</button>
                     </td>
                 </tr>
             </table>
