--- a/CarCre/Views/Warranty/Index.cshtml
+++ b/CarCre/Views/Warranty/Index.cshtml
@@ -18,16 +18,14 @@
             <thead>
                 <tr>
                     <th>
-                        Action
                     </th>
                     <th>
-                        Action
                     </th>
                     <th>
                         Policy Number
                     </th>
                     <th>
-                        Vehicle
+                        Vehicle (VIN)
                     </th>
                     <th>
                         Warranty Provider
