--- a/CarCre/Views/Insurance/Index.cshtml
+++ b/CarCre/Views/Insurance/Index.cshtml
@@ -26,7 +26,7 @@
                         Policy Number
                     </th>
                     <th>
-                        Vehicle
+                        Vehicle (VIN)
                     </th>
                     <th>
                         Insurance Provider
