--- a/CarCre/Views/Lease/Index.cshtml
+++ b/CarCre/Views/Lease/Index.cshtml
@@ -23,7 +23,7 @@
                     <th>
                     </th>
                     <th>
-                        Vehicle
+                        Vehicle (VIN)
                     </th>
                     <th>
                         Lease Start Date
