VehicleSummary - Single/All vehicles

--- a/CarCre/Views/Shared/_Layout.cshtml
+++ b/CarCre/Views/Shared/_Layout.cshtml
@@ -90,6 +90,7 @@
                         </ul>
                     </li>
                     <li>@Html.ActionLink("Lease", "Index", "Lease")</li>
+                    <li>@Html.ActionLink("Summary", "Index", "VehicleSummary")</li>
                     @*<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Help<span class="caret"></span></a>
                         <ul class="dropdown-menu">
