--- a/CarCre/Views/Account/Index.cshtml
+++ b/CarCre/Views/Account/Index.cshtml
@@ -14,6 +14,7 @@
 <script type="text/javascript">
     $(document).ready(function () {
 
+        $("#UserName").focus();
         $('#login-form-link').click(function (e) {
             $("#login-form").delay(100).fadeIn(100);
             $("#register-form").fadeOut(100);
