--- a/CarCre/Views/Lease/Index.cshtml
+++ b/CarCre/Views/Lease/Index.cshtml
@@ -63,7 +63,7 @@
                             <input type="button" id="EditBtn" class="EditRecord" data-toggle="modal" data-target="#myEditModal" value="Edit" data-id="@record.LeaseId" />
                         </td>
                         <td>
-                            <input type="button" value="Delete" data-id="@record.LeaseId" onclick="location.href='@Url.Action("DeleteLease", "Lease", new { leaseId = record.LeaseId})'" />
+                            <input type="button" value="Delete" data-id="@record.LeaseId" class="delete" data-confirm="Are you sure to delete this item?" />
                         </td>
 
                         <td>
@@ -162,4 +162,29 @@
             });
         });
     });
+
+     var deleteLinks = document.querySelectorAll('.delete');
+
+    for (var i = 0; i < deleteLinks.length; i++) {
+        deleteLinks[i].addEventListener('click', function (event) {
+            event.preventDefault();
+
+            var choice = confirm(this.getAttribute('data-confirm'));
+            if (choice) {
+                var ds = $(this).data("id");
+                $.ajax({
+                    type: "POST",
+                    dataType: "JSON",
+                    url: '/Lease/DeleteLease',
+                    data: { 'leaseId': ds },
+                    success: function (result) {
+                        if (result == "Success") {
+                            location.reload();
+                        }
+                    }
+                });
+            }
+        });
+    }
+
 </script>
