--- a/CarCre/Views/Repair/Index.cshtml
+++ b/CarCre/Views/Repair/Index.cshtml
@@ -57,7 +57,7 @@
                             <input type="button" id="EditBtn" class="EditRecord" data-toggle="modal" data-target="#myEditModal" value="Edit" data-id="@record.RepairId" />
                         </td>
                         <td>
-                            <input type="button" value="Delete" data-id="@record.RepairId" onclick="location.href='@Url.Action("DeleteRepair", "Repair", new { repairId = record.RepairId})'" />
+                            <input type="button" value="Delete" data-id="@record.RepairId" class="delete" data-confirm="Are you sure to delete this item?" />   
                         </td>
                         
                         <td>
@@ -149,6 +149,30 @@
             });
         });
     });
+
+    var deleteLinks = document.querySelectorAll('.delete');
+
+    for (var i = 0; i < deleteLinks.length; i++) {
+        deleteLinks[i].addEventListener('click', function (event) {
+            event.preventDefault();
+
+            var choice = confirm(this.getAttribute('data-confirm'));
+            if (choice) {
+                var ds = $(this).data("id");
+                $.ajax({
+                    type: "POST",
+                    dataType: "JSON",
+                    url: '/Repair/DeleteRepair',
+                    data: { 'repairId': ds },
+                    success: function (result) {
+                        if (result == "Success") {
+                            location.reload();
+                        }
+                    }
+                });
+            }
+        });
+    }
 </script>
 
 
