--- a/CarCre/Views/Warranty/Index.cshtml
+++ b/CarCre/Views/Warranty/Index.cshtml
@@ -53,7 +53,7 @@
                             <input type="button" id="EditBtn" class="EditRecord" data-toggle="modal" data-target="#myEditModal" value="Edit" data-id="@record.WarrantyId" />
                         </td>
                         <td>
-                            <input type="button" value="Delete" data-id="@record.WarrantyId" onclick="location.href='@Url.Action("DeleteWarranty", "Warranty", new { warrantyId = record.WarrantyId})'" />
+                            <input type="button" value="Delete" data-id="@record.WarrantyId" class="delete" data-confirm="Are you sure to delete this item?" />
                         </td>
                         <td>
                             @record.PolicyNumber
@@ -142,4 +142,28 @@
             });
         });
     });
+
+    var deleteLinks = document.querySelectorAll('.delete');
+
+    for (var i = 0; i < deleteLinks.length; i++) {
+        deleteLinks[i].addEventListener('click', function (event) {
+            event.preventDefault();
+
+            var choice = confirm(this.getAttribute('data-confirm'));
+            if (choice) {
+                var ds = $(this).data("id");
+                $.ajax({
+                    type: "POST",
+                    dataType: "JSON",
+                    url: '/Warranty/DeleteWarranty',
+                    data: { 'warrantyId': ds },
+                    success: function (result) {
+                        if (result == "Success") {
+                            location.reload();
+                        }
+                    }
+                });
+            }
+        });
+    }
 </script>
