--- a/CarCre/Views/Vehicle/Index.cshtml
+++ b/CarCre/Views/Vehicle/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<CarCare.Models.VehicleViewModel>
 
 @{
-    ViewBag.Title = "Manage Vechile";
+    ViewBag.Title = "Manage Vehicle";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Manage Vechile</h2>
+<h2>Manage Vehicle</h2>
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <link href="~/Content/bootstrap.css" rel="stylesheet" />
@@ -23,10 +23,10 @@
                     <th>
                     </th>
                     <th>
-                        VechicleDealer
+                        VehicleDealer
                     </th>
                     <th>
-                        VechicleYear
+                        VehicleYear
                     </th>
                     <th>
                         VehicleMark
