--- a/CarCre/Views/Lease/Index.cshtml
+++ b/CarCre/Views/Lease/Index.cshtml
@@ -67,7 +67,7 @@
                         </td>
 
                         <td>
-                            @Html.DropDownList("VehhicleDropdown", new SelectList(record.Vehicles, "Value", "Text", record.VehicleId))
+                            @record.VINNumber
                         </td>
                         <td>
                             @record.LeaseStartDate
@@ -163,7 +163,7 @@
         });
     });
 
-     var deleteLinks = document.querySelectorAll('.delete');
+    var deleteLinks = document.querySelectorAll('.delete');    
 
     for (var i = 0; i < deleteLinks.length; i++) {
         deleteLinks[i].addEventListener('click', function (event) {
@@ -186,5 +186,4 @@
             }
         });
     }
-
 </script>
