--- a/CarCre/Views/Repair/Index.cshtml
+++ b/CarCre/Views/Repair/Index.cshtml
@@ -61,10 +61,10 @@
                         </td>
                         
                         <td>
-                            @Html.DropDownList("VehhicleDropdown", new SelectList(record.Vehicles, "Value", "Text", record.VehicleId))
+                            @record.VINNumber
                         </td>
                         <td>
-                            @record.RepairStationId
+                            @record.StationStreetAddress
                         </td>
                         <td>
                             @record.RepairCost
