--- a/CarCre/Views/Shared/_Layout.cshtml
+++ b/CarCre/Views/Shared/_Layout.cshtml
@@ -66,7 +66,7 @@
                     </li>  
                     <li>@Html.ActionLink("Vehicles", "Index", "Vehicle")</li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Maintainenance<span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Maintenance<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("State Inspection", "Index", "StateInspection")</li> 
                             <li>@Html.ActionLink("Oil Change", "Index", "OilChange")</li>
