--- a/CarCre/Views/Warranty/Index.cshtml
+++ b/CarCre/Views/Warranty/Index.cshtml
@@ -59,7 +59,7 @@
                             @record.PolicyNumber
                         </td>
                         <td>
-                            @Html.DropDownList("VehhicleDropdown", new SelectList(record.Vehicles, "Value", "Text", record.VehicleId))
+                            @record.VINNumber
                         </td>
                         <td>
                             @record.WarrantyProvider
