--- a/CarCre/Views/ServiceStations/Index.cshtml
+++ b/CarCre/Views/ServiceStations/Index.cshtml
@@ -88,7 +88,7 @@
                             @Html.DisplayFor(modelItem => ServiceStation.Latitude)
                         </td>
                         <td>
-                            <button onclick="GoogleService.displayPosition('serviceStationMap', @ServiceStation.Latitude, @ServiceStation.Longitude, '@ServiceStation.OwnedBy')">Display On Map</button>
+                            <button onclick='GoogleService.displayPosition("serviceStationMap", @ServiceStation.Latitude, @ServiceStation.Longitude, "@ServiceStation.OwnedBy")'>Display On Map</button>
                         </td>
 
                     </tr>
